Azure Blob Storage Servis Entegrasyonu

--- a/Presentation/ECommerceAPI.API/appsettings.json
+++ b/Presentation/ECommerceAPI.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "PostgreSQL": "User ID=postgres;Password=postgrespw;Host=host.docker.internal;Port=49153;Database=ECommerceAPIDb;"
+  },
+  "Storage": {
+    "Azure": "",
+    "AWS": "",
+    "Google": ""
   }
 }
