--- a/Presentation/ECommerceAPI.API/appsettings.json
+++ b/Presentation/ECommerceAPI.API/appsettings.json
@@ -13,5 +13,10 @@
     "Azure": "",
     "AWS": "",
     "Google": ""
+  },
+  "Token": {
+    "Audience": "www.bilmemne.com",
+    "Issuer": "www.myapi.com",
+    "SecurityKey": "laylaylom galiba sana gore sevmeler.."
   }
 }
